fix gap between cover and footer

--- a/client/src/Style/IndividualAlbum.css
+++ b/client/src/Style/IndividualAlbum.css
@@ -11,6 +11,6 @@
 
 .individualalbum{
     display:flex;
-    width: 30vw;
-    height:65vh;
+    width: 25vw;
+    height:50vh;
 }
